# Comparativa-BFS-DFS

./: .gitignore  LICENSE  README.md
app/base/: CMakeLists.txt
app/base/include/base/: application.hh  config_loader.hh  gentree.hh  logger.hh  random.hh  scoped_timer.hh  search.hh  utility.hh
app/base/src/: logger.cc  random.cc  scoped_timer.cc  search.cc
app/generator/: generator_config.toml
app/generator/src/: config_loader.cc  generator_app.cc  main.cc
app/inference/: paired_results.csv  report.csv  report_0.csv  report_1.csv  report_2.csv  report_3.csv  report_4.csv  script.R  test_report.csv
app/tester/include/: tester_app.hh  tree_loader.hh
app/tester/src/: main.cc  tester_app.cc  tree_loader.cc
